force-app/main/default/objects/Contact/fields/Notes_Related_To_Fertility_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Notes_Related_To_Fertility_Diagnosis__c</fullName>
    <label>Notes Related To Fertility Diagnosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>