force-app/main/default/objects/Contact/fields/Number_of_Children_Had__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children_Had__c</fullName>
    <description>Intended for Female Donor Data Collection</description>
    <label>Number of Children Had?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>