force-app/main/default/objects/Contact/fields/Number_of_Embryos_to_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Embryos_to_Transfer__c</fullName>
    <label>Number of Embryos to Transfer?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>