force-app/main/default/objects/Contact/fields/Number_of_Frozen_Embryos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Frozen_Embryos__c</fullName>
    <label>Number of Frozen Embryos</label>
    <summarizedField>Embryo_Batch__c.Count_Frozen__c</summarizedField>
    <summaryForeignKey>Embryo_Batch__c.Patient_Donor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>