force-app/main/default/objects/Contact/fields/Number_of_Women_had_Children_With__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Women_had_Children_With__c</fullName>
    <label>Number of Women had Children With?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>