force-app/main/default/objects/Contact/fields/Office_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_Donor_ID__c</fullName>
    <label>Office Donor ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>