force-app/main/default/objects/Contact/fields/Original_Import__c.field-meta.xml
<CustomField>
    <fullName>Original_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Import</label>
    <type>Checkbox</type>
</CustomField>