force-app/main/default/objects/Contact/fields/Other_Names_Used_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Other_Names_Used_if_applicable__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Other Names Used (if applicable)</label>
    <length>35</length>
    <type>Text</type>
</CustomField>