force-app/main/default/objects/Contact/fields/Overview_Undertaken__c.field-meta.xml
<CustomField>
    <fullName>Overview_Undertaken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overview Undertaken</label>
    <type>Checkbox</type>
</CustomField>