force-app/main/default/objects/Contact/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patients &amp; Donors</relationshipLabel>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>