force-app/main/default/objects/Contact/fields/Partner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Full_Name__c</fullName>
    <formula>Partner__r.FirstName&amp;&quot; &quot;&amp;Partner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Full Name</label>
    <type>Text</type>
</CustomField>