force-app/main/default/objects/Contact/fields/Partner_ID_for_Import__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID_for_Import__c</fullName>
    <label>Partner ID for Import</label>
    <length>255</length>
    <type>Text</type>
</CustomField>