force-app/main/default/objects/Contact/fields/Partner_s_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_Birthdate__c</fullName>
    <label>Partner&apos;s Birthdate</label>
    <type>Date</type>
</CustomField>