force-app/main/default/objects/Contact/fields/Partner_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_First_Name__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Partner&apos;s First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>