force-app/main/default/objects/Contact/fields/Partner_s_Maiden_Name_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_Maiden_Name_if_applicable__c</fullName>
    <label>Partner&apos;s Maiden Name (if applicable)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>