force-app/main/default/objects/Contact/fields/Paternal_Grandmother_s_Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Paternal_Grandmother_s_Country_of_Birth__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Paternal Grandmother&apos;s Country of Birth</label>
    <length>25</length>
    <type>Text</type>
</CustomField>