force-app/main/default/objects/Contact/fields/Patient_Auto_ID_As_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Auto_ID_As_Number__c</fullName>
    <formula>VALUE( Patient_ID_Auto_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Auto ID As Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>