force-app/main/default/objects/Contact/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <label>Patient ID</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>