force-app/main/default/objects/Contact/fields/Patient_ID_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID_Auto_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Patient ID Auto Number</label>
    <type>AutoNumber</type>
</CustomField>