force-app/main/default/objects/Contact/fields/Patient_ID_Display_Formula__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID_Display_Formula__c</fullName>
    <formula>TEXT( Patient_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient ID</label>
    <type>Text</type>
</CustomField>