force-app/main/default/objects/Contact/fields/Patient_ID_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID_Searchable__c</fullName>
    <label>Patient ID Searchable</label>
    <length>18</length>
    <type>Text</type>
</CustomField>