force-app/main/default/objects/Contact/fields/Period_of_Consent_to_Use_Sample__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Consent_to_Use_Sample__c</fullName>
    <label>Period of Consent to Use Sample (Months)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>