force-app/main/default/objects/Contact/fields/Previous_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>Previous_Adverse_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Adverse Event</label>
    <type>Checkbox</type>
</CustomField>