force-app/main/default/objects/Contact/fields/Previous_Baby__c.field-meta.xml
<CustomField>
    <fullName>Previous_Baby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Baby</label>
    <type>Checkbox</type>
</CustomField>