force-app/main/default/objects/Contact/fields/Previous_Laproscopic_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Previous_Laproscopic_Surgery__c</fullName>
    <label>Previous Laparoscopic Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>