force-app/main/default/objects/Contact/fields/Primary_Cause_of_Female_Infertility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cause_of_Female_Infertility__c</fullName>
    <label>Primary Cause of Female Infertility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Adenomyosis</fullName>
            </value>
            <value>
                <fullName>Endometrial defect</fullName>
            </value>
            <value>
                <fullName>Endometriosis</fullName>
            </value>
            <value>
                <fullName>Mild male factor</fullName>
            </value>
            <value>
                <fullName>Severe male factor</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Poor responder</fullName>
            </value>
            <value>
                <fullName>Egg donor( ?covered by prev field)</fullName>
            </value>
            <value>
                <fullName>Tubal</fullName>
            </value>
            <value>
                <fullName>Uterine anomaly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>