force-app/main/default/objects/Contact/fields/Primary_Cause_of_Infertility_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cause_of_Infertility_Diagnosis__c</fullName>
    <description>ANZARD LABEL: MALE_DIAG</description>
    <label>Primary Cause of Male Infertility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Idiopathic (unexplained)</fullName>
            </value>
            <value>
                <fullName>2 = Genetic - Klinefelter</fullName>
            </value>
            <value>
                <fullName>3 = Genetic Y Deletion</fullName>
            </value>
            <value>
                <fullName>4 = Genetic - Other aneupoidies, single gene.</fullName>
            </value>
            <value>
                <fullName>5 = Testis Damage - Cancer Treatment</fullName>
            </value>
            <value>
                <fullName>6 = Testis Damage - Other (incl.past/recent cryptorchidism, vascular, infective, trauma)</fullName>
            </value>
            <value>
                <fullName>7 = Gonadotrophin Deficiency</fullName>
            </value>
            <value>
                <fullName>8 = Vasectomy</fullName>
            </value>
            <value>
                <fullName>9 = Congenital absence of the Vas Deferens/Cystic Fibrosis</fullName>
            </value>
            <value>
                <fullName>10 = Obstructive Disorder (Other)</fullName>
            </value>
            <value>
                <fullName>11 = Erectile Dysfunction incl. Psychosexual</fullName>
            </value>
            <value>
                <fullName>12 = Ejaculatory Disorders (incl. Spinal Injury, Retrograde and Anejaculation.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>