force-app/main/default/objects/Contact/fields/Reason_For_Fertility_Preservation__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Fertility_Preservation__c</fullName>
    <label>Reason For Fertility Preservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_1_Medical_2_Non_Medical</valueSetName>
    </valueSet>
</CustomField>