force-app/main/default/objects/Contact/fields/Reasons_for_Donating__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Donating__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Reasons for Donating</label>
    <length>200</length>
    <type>Text</type>
</CustomField>