force-app/main/default/objects/Contact/fields/Referral_Count__c.field-meta.xml
<CustomField>
    <fullName>Referral_Count__c</fullName>
    <label>Referral Count</label>
    <summaryForeignKey>Referral__c.Patient__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>