force-app/main/default/objects/Contact/fields/RIBirthdate__c.field-meta.xml
<CustomField>
    <fullName>RIBirthdate__c</fullName>
    <formula>TEXT(YEAR(Birthdate))&amp;&quot;-&quot;&amp;TEXT(MONTH(Birthdate))&amp;&quot;-&quot;&amp;TEXT(DAY(Birthdate))&amp;&quot;T15:07:38.6875000-05:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RIBirthdate</label>
    <type>Text</type>
</CustomField>