force-app/main/default/objects/Contact/fields/RIIsMale__c.field-meta.xml
<CustomField>
    <fullName>RIIsMale__c</fullName>
    <formula>IF( TEXT(Sex_at_Birth__c) = &quot;Male&quot;, &quot;1&quot;, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RIIsMale</label>
    <type>Text</type>
</CustomField>