force-app/main/default/objects/Contact/fields/Searchable_First_2_and_Last_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Searchable_First_2_and_Last_2_Name__c</fullName>
    <label>Searchable First 2 and Last 2 Name</label>
    <length>5</length>
    <type>Text</type>
</CustomField>