force-app/main/default/objects/Contact/fields/Sex_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Sex_at_Birth__c</fullName>
    <label>Sex at Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>