force-app/main/default/objects/Contact/fields/Sex_First_Letter__c.field-meta.xml
<CustomField>
    <fullName>Sex_First_Letter__c</fullName>
    <description>Formula that pulls the first letter of &apos;Sex at Birth&apos; for use in Pathology Request Forms</description>
    <formula>LEFT(TEXT (Sex_at_Birth__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sex - First Letter</label>
    <type>Text</type>
</CustomField>