force-app/main/default/objects/Contact/fields/State_Born_in__c.field-meta.xml
<CustomField>
    <fullName>State_Born_in__c</fullName>
    <label>State of Birth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>