force-app/main/default/objects/Contact/fields/Storage_Date__c.field-meta.xml
<CustomField>
    <fullName>Storage_Date__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Storage Date</label>
    <type>Date</type>
</CustomField>