force-app/main/default/objects/Contact/fields/Suburb_Born_in__c.field-meta.xml
<CustomField>
    <fullName>Suburb_Born_in__c</fullName>
    <label>Suburb of Birth</label>
    <length>60</length>
    <type>Text</type>
</CustomField>