force-app/main/default/objects/Contact/fields/Surname_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Surname_at_Birth__c</fullName>
    <label>Surname at Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>