force-app/main/default/objects/Contact/fields/Surname_Capitalised__c.field-meta.xml
<CustomField>
    <fullName>Surname_Capitalised__c</fullName>
    <formula>UPPER( LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surname Capitalised</label>
    <type>Text</type>
</CustomField>