force-app/main/default/objects/Contact/fields/Total_Available_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Credits__c</fullName>
    <label>Total Available Credits</label>
    <summarizedField>Invoice__c.Credit_Available__c</summarizedField>
    <summaryForeignKey>Invoice__c.Patient_Donor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>