force-app/main/default/objects/Contact/fields/Treating_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Treating_Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Treating Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Doctor__c.Internal_Doctor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patients &amp; Donors</relationshipLabel>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>