force-app/main/default/objects/Contact/fields/Usual_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Usual_Occupation__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Usual Occupation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>