force-app/main/default/objects/Contact/fields/Which_Clinic_was_Donation_Made_at__c.field-meta.xml
<CustomField>
    <fullName>Which_Clinic_was_Donation_Made_at__c</fullName>
    <description>Intended for Donor Data Collection</description>
    <label>Which Clinic was Donation Made at?</label>
    <length>35</length>
    <type>Text</type>
</CustomField>