force-app/main/default/objects/Contact/fields/X2nd_Mobile__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Mobile__c</fullName>
    <label>2nd Mobile</label>
    <type>Phone</type>
</CustomField>