force-app/main/default/objects/Contact/fields/Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Yes_No__c</fullName>
    <label>Yes No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>