force-app/main/default/objects/Contact/recordTypes/Known_Donor.recordType-meta.xml
<RecordType>
    <fullName>Known_Donor</fullName>
    <active>true</active>
    <label>Known Donor</label>
</RecordType>