force-app/main/default/objects/Contact/recordTypes/Patient.recordType-meta.xml
<RecordType>
    <fullName>Patient</fullName>
    <active>true</active>
    <label>Patient</label>
</RecordType>