force-app/main/default/objects/Contact/recordTypes/Surrogate.recordType-meta.xml
<RecordType>
    <fullName>Surrogate</fullName>
    <active>true</active>
    <label>Surrogate</label>
</RecordType>