force-app/main/default/objects/Contact/validationRules/Must_be_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Medicare_Number__c )),
    NOT(REGEX(Medicare_Number__c , &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>The Medicare number is not 10 digits</errorMessage>
</ValidationRule>