force-app/main/default/objects/Contact/validationRules/Validate_Medicare_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Medicare_Date</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(
  ISBLANK(Expiry__c),
  REGEX(Expiry__c, &quot;\\d{2}/\\d{2}&quot;)
))</errorConditionFormula>
    <errorDisplayField>Expiry__c</errorDisplayField>
    <errorMessage>The date format must be Month/Year 01/22</errorMessage>
</ValidationRule>