force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>Patient_ID_Display_Formula__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Amounts_Outstanding__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Partner_Full_Name__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Patients &amp; Donors</label>
</ListView>