force-app/main/default/objects/Contact/listViews/Patients_without_ID_Check.listView-meta.xml
<ListView>
    <fullName>Patients_without_ID_Check</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ID_Checked__c</field>
        <operation>lessThan</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Test_Patient__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Patients without ID Check</label>
    <sharedTo>
        <group>Life_Fertility_Admin</group>
    </sharedTo>
</ListView>